--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 <header>
     <div class="header-content">
         <div>
-            <div class="app-title">STRUCTURAL SUITE</div>
+            <div class="app-title">STRUCTURAL DESIGN PROGRAM</div>
             <div class="app-subtitle">NSCP 2015 / ACI 318-14</div>
         </div>
         <div class="student-info">
@@ -627,3 +627,4 @@
 </script>
 </body>
 </html>
+
